# django-autocompleter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.markdown  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  runtests.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: canceller.yml  main.yml
autocompleter/: __init__.py  apps.py  base.py  fields.py  registry.py  settings.py  urls.py  utils.py  views.py  widgets.py
autocompleter/autocompleter_tests/: models.py  tests.py
autocompleter/autocompleter_tests/fixtures/: indicator_test_data.json  indicator_test_data_small.json  stock_test_data.json  stock_test_data_small.json
autocompleter/management/commands/: autocompleter_init.py
autocompleter_test_project/: settings.py  tests.py
autocompleter_test_project/fixtures/: indicator_test_data.json  indicator_test_data_small.json  stock_test_data.json  stock_test_data_small.json
autocompleter_test_project/test_app/: tests.py
autocompleter_test_project/test_app/fixtures/: stock_test_data_small.json
django_autocompleter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_project/: manage.py  settings.py
test_project/test_app/: admin.py  autocompleters.py  calc_info.py  forms.py  models.py  tests.py
test_project/test_app/fixtures/: indicator_test_data.json  indicator_test_data_small.json  stock_test_data.json  stock_test_data_small.json
test_project/test_app/tests/: base.py  test_aliasing.py  test_exact.py  test_management_command.py  (+5 more)
test_project/test_project/: settings.py  urls.py  wsgi.py
(+2 files in other folders)
